# joymouse-rs

./: .gitignore  Cargo.toml  README.md  bindings.toml  flake.nix  joymouse.toml  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
.moon/: workspace.yml
crates/bindings/: Cargo.toml
crates/bindings/src/: keys.rs  lib.rs
crates/cli/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/controller/: Cargo.toml
crates/controller/src/: error.rs  event.rs  lib.rs  settings.rs
crates/controller/src/button/: control.rs  error.rs  event.rs  mod.rs  state.rs
crates/controller/src/joystick/: control.rs  direction.rs  error.rs  event.rs  keys.rs  mod.rs  motion.rs  polarity.rs  state.rs  vector.rs
crates/controller/src/joystick/axis/: error.rs  mod.rs
crates/controller/src/joystick/polarity/: error.rs  mod.rs
crates/core/: Cargo.toml
crates/gui/: Cargo.toml  moon.yml  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/src/: lib.rs
crates/io/: Cargo.toml
crates/io/src/: lib.rs
crates/io/src/button/: error.rs
crates/io/src/event/: mod.rs
crates/io/src/key/: error.rs  event.rs  mod.rs  state.rs
crates/io/src/key/alphabetic/: error.rs  mod.rs
crates/io/src/key/arrow/: error.rs  mod.rs
crates/io/src/key/button/: error.rs  mod.rs
crates/io/src/key/function/: error.rs  mod.rs
crates/io/src/key/modifier/: error.rs  mod.rs
crates/io/src/key/mouse/: error.rs  mod.rs
crates/io/src/key/numeric/: error.rs  mod.rs
crates/io/src/key/system/: error.rs  mod.rs
crates/io/src/movement/: error.rs  event.rs  mod.rs
crates/io/src/movement/absolute/: mod.rs
crates/io/src/movement/axis/: error.rs  mod.rs
crates/io/src/movement/polarity/: error.rs  mod.rs
crates/joymouse/: Cargo.toml
crates/joymouse/src/: main.rs
crates/joymouse/src/controller/: error.rs  event.rs  mod.rs  settings.rs  state.rs
crates/joymouse/src/mouse/: mod.rs
crates/key/: Cargo.toml
crates/key/src/: alphabetic.rs  arrow.rs  button.rs  function.rs  lib.rs  modifier.rs  mouse.rs  numeric.rs  system.rs
crates/platform/: Cargo.toml
crates/platform/src/: error.rs  event.rs  keys.rs  lib.rs  state.rs
crates/platform/src/button/: control.rs  error.rs  event.rs  mod.rs
crates/platform/src/joystick/: axis.rs  control.rs  error.rs  event.rs  keys.rs  mod.rs  motion.rs  polarity.rs  state.rs
crates/platform/src/joystick/axis/: error.rs  mod.rs
crates/platform/src/linux/: event.rs  mod.rs
crates/platform/src/linux/button/: event.rs  mod.rs
crates/platform/src/linux/joystick/: axis.rs  event.rs  mod.rs  polarity.rs
crates/platform/src/windows/: mod.rs
crates/platform/src/windows/device/: buttons.rs  gamepad.rs  mod.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/tui/: Cargo.toml
ui/: angular.json  components.json  moon.yml  package.json  pnpm-lock.yaml  postcss.config.json  styles.css  tsconfig.json
ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src/app/: app.component.html  app.component.ts
(+19 files in other folders)
