[package]
name = "bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
controller = { path = "../controller" }
io = { path = "../io" }
settings = { path = "../settings" }
config = { version = "0.15.3", features = ["toml"] }
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
