[package]
name = "bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
config = { version = "0.15.3", features = ["toml"] }
controller = { path = "../controller" }
directories = "6.0.0"
io = { path = "../io" }
serde = { version = "1.0.219", features = ["derive"] }
settings = { path = "../settings" }
toml = "0.9.2"
