[package]
name = "gui"
version = "0.1.0"
description = "A virtual gamepad using mouse and keyboard"
authors = ["Clemens Horn <me@clemenshorn.com>"]
edition = "2021"

[lib]
name = "gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
controller = { path = "../controller" }
platform = { path = "../platform" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
