[package]
name = "platform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bindings = { path = "../bindings" }
controller = { path = "../controller" }
io = { path = "../io" }
settings = { path = "../settings" }

[target.'cfg(not(windows))'.dependencies]
epoll = "4.3.3"
evdev = "0.13.1"

[target.'cfg(windows)'.dependencies]
vigem-client = {version = "0.1.4", features = ["unstable_ds4"]}
device_query = "4.0.0"
