[package]
name = "platform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bindings = { path = "../bindings" }
controller = { path = "../controller" }
io = { path = "../io" }
settings = { path = "../settings" }

[target.'cfg(not(windows))'.dependencies]
epoll = "4.3.3"
evdev = "0.13.1"

[target.'cfg(windows)'.dependencies]
vigem-client = "0.1.4"
device_query = "4.0.0"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
] }
